TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/LibTiePie.pas


procedure LibInit; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LibInit'{$endif};
function LibIsInitialized : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LibIsInitialized'{$endif};
procedure LibExit; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LibExit'{$endif};
function LibGetVersion : TTpVersion; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LibGetVersion'{$endif};
function LibGetVersionExtra : PAnsiChar; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LibGetVersionExtra'{$endif};
function LibGetConfig( pBuffer : PByte ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LibGetConfig'{$endif};
function LibGetLastStatus : TLibTiePieStatus; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LibGetLastStatus'{$endif};
function LibGetLastStatusStr : PAnsiChar; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LibGetLastStatusStr'{$endif};
procedure LstUpdate; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstUpdate'{$endif};
function LstGetCount : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstGetCount'{$endif};
function LstOpenDevice( dwIdKind , dwId , dwDeviceType : LongWord ) : TLibTiePieHandle; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstOpenDevice'{$endif};
function LstOpenOscilloscope( dwIdKind , dwId : LongWord ) : TLibTiePieHandle; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstOpenOscilloscope'{$endif};
function LstOpenGenerator( dwIdKind , dwId : LongWord ) : TLibTiePieHandle; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstOpenGenerator'{$endif};
function LstOpenI2CHost( dwIdKind , dwId : LongWord ) : TLibTiePieHandle; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstOpenI2CHost'{$endif};
function LstCreateCombinedDevice( pDeviceHandles : PLibTiePieHandle ; dwCount : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstCreateCombinedDevice'{$endif};
function LstCreateAndOpenCombinedDevice( pDeviceHandles : PLibTiePieHandle ; dwCount : LongWord ) : TLibTiePieHandle; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstCreateAndOpenCombinedDevice'{$endif};
procedure LstRemoveDevice( dwSerialNumber : LongWord ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstRemoveDevice'{$endif};
procedure LstRemoveDeviceForce( dwSerialNumber : LongWord ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstRemoveDeviceForce'{$endif};
function LstDevCanOpen( dwIdKind , dwId , dwDeviceType : LongWord ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevCanOpen'{$endif};
function LstDevGetProductId( dwIdKind , dwId : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetProductId'{$endif};
function LstDevGetVendorId( dwIdKind , dwId : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetVendorId'{$endif};
function LstDevGetName( dwIdKind , dwId : LongWord ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetName'{$endif};
function LstDevGetNameShort( dwIdKind , dwId : LongWord ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetNameShort'{$endif};
function LstDevGetNameShortest( dwIdKind , dwId : LongWord ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetNameShortest'{$endif};
function LstDevGetDriverVersion( dwIdKind , dwId : LongWord ) : TTpVersion; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetDriverVersion'{$endif};
function LstDevGetRecommendedDriverVersion( dwIdKind , dwId : LongWord ) : TTpVersion; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetRecommendedDriverVersion'{$endif};
function LstDevGetFirmwareVersion( dwIdKind , dwId : LongWord ) : TTpVersion; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetFirmwareVersion'{$endif};
function LstDevGetRecommendedFirmwareVersion( dwIdKind , dwId : LongWord ) : TTpVersion; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetRecommendedFirmwareVersion'{$endif};
function LstDevGetCalibrationDate( dwIdKind , dwId : LongWord ) : TTpDate; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetCalibrationDate'{$endif};
function LstDevGetSerialNumber( dwIdKind , dwId : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetSerialNumber'{$endif};
function LstDevGetIPv4Address( dwIdKind , dwId : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetIPv4Address'{$endif};
function LstDevGetIPPort( dwIdKind , dwId : LongWord ) : Word; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetIPPort'{$endif};
function LstDevHasServer( dwIdKind , dwId : LongWord ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevHasServer'{$endif};
function LstDevGetServer( dwIdKind , dwId : LongWord ) : TLibTiePieHandle; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetServer'{$endif};
function LstDevGetTypes( dwIdKind , dwId : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetTypes'{$endif};
function LstDevGetContainedSerialNumbers( dwIdKind , dwId : LongWord ; pBuffer : PLongWord ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstDevGetContainedSerialNumbers'{$endif};
function LstCbDevGetProductId( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstCbDevGetProductId'{$endif};
function LstCbDevGetVendorId( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstCbDevGetVendorId'{$endif};
function LstCbDevGetName( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstCbDevGetName'{$endif};
function LstCbDevGetNameShort( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstCbDevGetNameShort'{$endif};
function LstCbDevGetNameShortest( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ; pBuffer : PAnsiChar ; dwBufferLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstCbDevGetNameShortest'{$endif};
function LstCbDevGetDriverVersion( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : TTpVersion; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstCbDevGetDriverVersion'{$endif};
function LstCbDevGetFirmwareVersion( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : TTpVersion; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstCbDevGetFirmwareVersion'{$endif};
function LstCbDevGetCalibrationDate( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : TTpDate; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstCbDevGetCalibrationDate'{$endif};
function LstCbScpGetChannelCount( dwIdKind , dwId , dwContainedDeviceSerialNumber : LongWord ) : Word; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstCbScpGetChannelCount'{$endif};
procedure LstSetCallbackDeviceAdded( pCallback : TTpCallbackDeviceList ; pData : Pointer ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstSetCallbackDeviceAdded'{$endif};
procedure LstSetCallbackDeviceRemoved( pCallback : TTpCallbackDeviceList ; pData : Pointer ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstSetCallbackDeviceRemoved'{$endif};
procedure LstSetCallbackDeviceCanOpenChanged( pCallback : TTpCallbackDeviceList ; pData : Pointer ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstSetCallbackDeviceCanOpenChanged'{$endif};
{$ifdef LINUX}
procedure LstSetEventDeviceAdded( fdEvent : Integer ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstSetEventDeviceAdded'{$endif};
procedure LstSetEventDeviceRemoved( fdEvent : Integer ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstSetEventDeviceRemoved'{$endif};
procedure LstSetEventDeviceCanOpenChanged( fdEvent : Integer ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstSetEventDeviceCanOpenChanged'{$endif};
{$endif LINUX}
{$ifdef MSWINDOWS}
procedure LstSetEventDeviceAdded( hEvent : THandle ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstSetEventDeviceAdded'{$endif};
procedure LstSetEventDeviceRemoved( hEvent : THandle ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstSetEventDeviceRemoved'{$endif};
procedure LstSetEventDeviceCanOpenChanged( hEvent : THandle ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstSetEventDeviceCanOpenChanged'{$endif};
procedure LstSetMessageDeviceAdded( hWnd : HWND ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstSetMessageDeviceAdded'{$endif};
procedure LstSetMessageDeviceRemoved( hWnd : HWND ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstSetMessageDeviceRemoved'{$endif};
procedure LstSetMessageDeviceCanOpenChanged( hWnd : HWND ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_LstSetMessageDeviceCanOpenChanged'{$endif};
{$endif MSWINDOWS}
function NetGetAutoDetectEnabled : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_NetGetAutoDetectEnabled'{$endif};
function NetSetAutoDetectEnabled( bEnable : ByteBool ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_NetSetAutoDetectEnabled'{$endif};
function NetSrvAdd( pURL : PAnsiChar ; dwURLLength : LongWord ; pHandle : PLibTiePieHandle ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_NetSrvAdd'{$endif};
function NetSrvRemove( pURL : PAnsiChar ; dwURLLength : LongWord ; bForce : ByteBool ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_NetSrvRemove'{$endif};
function NetSrvGetCount : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_NetSrvGetCount'{$endif};
function NetSrvGetByIndex( dwIndex : LongWord ) : TLibTiePieHandle; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_NetSrvGetByIndex'{$endif};
function NetSrvGetByURL( pURL : PAnsiChar ; dwURLLength : LongWord ) : TLibTiePieHandle; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_NetSrvGetByURL'{$endif};
procedure NetSrvSetCallbackAdded( pCallback : TTpCallbackHandle ; pData : Pointer ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_NetSrvSetCallbackAdded'{$endif};
{$ifdef LINUX}
procedure NetSrvSetEventAdded( fdEvent : Integer ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_NetSrvSetEventAdded'{$endif};
{$endif LINUX}
{$ifdef MSWINDOWS}
procedure NetSrvSetEventAdded( hEvent : THandle ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_NetSrvSetEventAdded'{$endif};
procedure NetSrvSetMessageAdded( hWnd : HWND ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_NetSrvSetMessageAdded'{$endif};
{$endif MSWINDOWS}
procedure ObjClose( hHandle : TLibTiePieHandle ); cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ObjClose'{$endif};
